--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,9 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#!/create">Create</a></li>
                     </ul>
+                    <ul class="nav navbar-nav" ng-show="user">
+                        <li><a href="#!/create">Hidden by logout users</a></li>
+                    </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/about">About 1 </a></li>
                     </ul>
@@ -62,6 +65,7 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
+        <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
