--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="openNaaSApp">
     <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <title>OpenNaaS</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
@@ -40,6 +41,9 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#!/about">About 1 </a></li>
                     </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#!/testMq">Test MQ </a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="dropdown" ng-show="user">
@@ -66,12 +70,17 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+        
+        <!-- XML to JSON lib -->
+        <script src="bower_components/x2js/xml2json.js"></script>
+        <script src="bower_components/angular-x2js/src/x2js.js"></script>
 
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
+        <script src="js/controllers/TestMqController.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
