separate services in files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,6 +81,8 @@
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
         <script src="js/controllers/TestMqController.js"></script>
+        <script src="js/services/historyService.js"></script>
+        <script src="js/services/testMqService.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
