--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,9 @@
                         <li><a href="#!/">Home</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
+                        <li><a href="#!/history">History</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li><a href="#!/resource1">Resource 1 </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
@@ -70,6 +73,7 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+        <script src="bower_components/ng-table/ng-table.js"></script>
         
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
@@ -81,6 +85,7 @@
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
         <script src="js/controllers/TestMqController.js"></script>
+        <script src="js/controllers/HistoryController.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/testMqService.js"></script>
         <script src="js/services.js"></script>
