--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <title>OpenNaaS</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="bower_components/ng-table/ng-table.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
     </head>
     <body >
