--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,7 +34,7 @@
                         <li><a href="#!/history">History</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="#!/resource1">Resource 1 </a></li>
+                        <li><a href="#!/rootResource">Root Resource </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/create">Create</a></li>
@@ -86,8 +86,10 @@
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
         <script src="js/controllers/TestMqController.js"></script>
+        <script src="js/controllers/rootResourceController.js"></script>
         <script src="js/controllers/HistoryController.js"></script>
         <script src="js/services/historyService.js"></script>
+        <script src="js/services/rootResource.js"></script>
         <script src="js/services/testMqService.js"></script>
         <script src="js/services.js"></script>
     </body>
