--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,6 +37,9 @@
                         <li><a href="#!/rootResource">Root Resource </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
+                        <li><a href="#!/tree">Tree</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li><a href="#!/create">Create</a></li>
                     </ul>
                     <ul class="nav navbar-nav" ng-show="user">
@@ -87,9 +90,14 @@
         <script src="js/controllers/about.js"></script>
         <script src="js/controllers/TestMqController.js"></script>
         <script src="js/controllers/rootResourceController.js"></script>
+        <script src="js/controllers/serviceProviderController.js"></script>
+        <script src="js/controllers/mqnaasResourceController.js"></script>
         <script src="js/controllers/HistoryController.js"></script>
+        <script src="js/controllers/treeCtrl.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/rootResource.js"></script>
+        <script src="js/services/serviceProviderService.js"></script>
+        <script src="js/services/mqNaaSResourceService.js"></script>
         <script src="js/services/testMqService.js"></script>
         <script src="js/services.js"></script>
     </body>
