--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,9 @@
         <title>OpenNaaS</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="bower_components/ng-table/ng-table.css" rel="stylesheet">
+        <link href="bower_components/ngDialog/css/ngDialog.css" rel="stylesheet">
+        <link href="bower_components/ngDialog/css/ngDialog-theme-default.css" rel="stylesheet">
+        <link href="bower_components/ngDialog/css/ngDialog-theme-plain.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
     </head>
     <body >
@@ -38,6 +41,9 @@
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/tree">Tree</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#!/sodales">SODALES </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/create">Create</a></li>
@@ -78,6 +84,7 @@
         <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
         <script src="bower_components/ng-table/ng-table.js"></script>
+        <script src="bower_components/ngDialog/js/ngDialog.js"></script>
         
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
@@ -85,6 +92,7 @@
 
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/mqnaasTemplates.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
@@ -94,6 +102,7 @@
         <script src="js/controllers/mqnaasResourceController.js"></script>
         <script src="js/controllers/HistoryController.js"></script>
         <script src="js/controllers/treeCtrl.js"></script>
+        <script src="js/controllers/SodalesController.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/rootResource.js"></script>
         <script src="js/services/serviceProviderService.js"></script>
