--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,9 @@
                         <li><a href="#!/sodales">SODALES </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
+                        <li><a href="#!/sodales_statistics">SODALES statistics </a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li><a href="#!/create">Create</a></li>
                     </ul>
                     <ul class="nav navbar-nav" ng-show="user">
@@ -93,6 +96,7 @@
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
         <script src="js/mqnaasTemplates.js"></script>
+        <script src="js/arnStatistics.js"></script>
         <script src="js/controllers/LoginController.js"></script>
         <script src="js/controllers/UsersController.js"></script>
         <script src="js/controllers/about.js"></script>
@@ -101,13 +105,15 @@
         <script src="js/controllers/serviceProviderController.js"></script>
         <script src="js/controllers/mqnaasResourceController.js"></script>
         <script src="js/controllers/HistoryController.js"></script>
-        <script src="js/controllers/treeCtrl.js"></script>
         <script src="js/controllers/SodalesController.js"></script>
+        <script src="js/controllers/SodalesStatisticsController.js"></script>
+        <script src="js/controllers/SodalesStatisticsController2.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/rootResource.js"></script>
         <script src="js/services/serviceProviderService.js"></script>
         <script src="js/services/mqNaaSResourceService.js"></script>
         <script src="js/services/testMqService.js"></script>
+        <script src="js/services/arnService.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
