Included d3js lib

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,6 +92,8 @@
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
         <script src="bower_components/angular-x2js/src/x2js.js"></script>
+        <!-- D3Js lib -->
+        <script src="bower_components/d3/d3.js"></script>
 
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
