--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,9 @@
                         <li><a href="#!/history">History</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
+                        <li><a href="#!/crawler">Crawler </a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
                         <li><a href="#!/rootResource">Root Resource </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
@@ -92,6 +95,7 @@
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
         <script src="bower_components/ng-table/ng-table.js"></script>
         <script src="bower_components/ngDialog/js/ngDialog.js"></script>
+        <script src="http://jnuno.com/tree-model-js/vendor/jnuno/TreeModel.js"></script>
         
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
@@ -114,6 +118,7 @@
         <script src="js/controllers/SodalesController.js"></script>
         <script src="js/controllers/SodalesStatisticsController.js"></script>
         <script src="js/controllers/SodalesStatisticsController2.js"></script>
+        <script src="js/controllers/crawlerResourceController.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/rootResource.js"></script>
         <script src="js/services/serviceProviderService.js"></script>
