Dependencies in index

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="plugin/external/jquery-ui.js"></script>
         <link href="css/custom.css" rel="stylesheet">
-        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
+        <link rel="stylesheet" href="css/jquery-ui.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="plugin/ONtoD3lib.css">
     </head>
     <body >
@@ -95,7 +95,7 @@
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
         <script src="bower_components/ng-table/ng-table.js"></script>
         <script src="bower_components/ngDialog/js/ngDialog.js"></script>
-        <script src="http://jnuno.com/tree-model-js/vendor/jnuno/TreeModel.js"></script>
+        <script src="bower_components/tree-model-bower/TreeModel.js"></script>
         
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
@@ -125,6 +125,7 @@
         <script src="js/services/mqNaaSResourceService.js"></script>
         <script src="js/services/testMqService.js"></script>
         <script src="js/services/arnService.js"></script>
+        <script src="js/services/sodales/spService.js"></script>
         <script src="js/services.js"></script>
         
         <script src="js/directives/graph.js"></script>
