--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="plugin/external/jquery-ui.js"></script>
         <link href="css/custom.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/jquery-ui.css" />
+        <link rel="stylesheet" href="bower_components/jquery-ui/themes/start/jquery-ui.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="plugin/ONtoD3lib.css">
     </head>
     <body >
@@ -54,6 +54,9 @@
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/sodales_statistics">SODALES statistics </a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#!/sodales_oa_dash">SODALES List SP </a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="#!/graph">graph</a></li>
@@ -126,6 +129,7 @@
         <script src="js/services/testMqService.js"></script>
         <script src="js/services/arnService.js"></script>
         <script src="js/services/sodales/spService.js"></script>
+        <script src="js/controllers/sodales/sodalesOpenaccessDashCtrl.js"></script>
         <script src="js/services.js"></script>
         
         <script src="js/directives/graph.js"></script>
