--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -128,6 +128,7 @@
         <script src="js/services/mqNaaSResourceService.js"></script>
         <script src="js/services/testMqService.js"></script>
         <script src="js/services/arnService.js"></script>
+        <script src="js/services/sodales/cpeService.js"></script>
         <script src="js/services/sodales/spService.js"></script>
         <script src="js/controllers/sodales/sodalesOpenaccessDashCtrl.js"></script>
         <script src="js/services.js"></script>
