Prepare VI view with the controller

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,6 +122,7 @@
         <script src="js/controllers/SodalesStatisticsController.js"></script>
         <script src="js/controllers/SodalesStatisticsController2.js"></script>
         <script src="js/controllers/crawlerResourceController.js"></script>
+        <script src="js/controllers/createVIController.js"></script>
         <script src="js/services/historyService.js"></script>
         <script src="js/services/rootResource.js"></script>
         <script src="js/services/serviceProviderService.js"></script>
