--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,6 +108,7 @@
 
         <script src="js/config.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/utils.js"></script>
         <script src="js/mqnaasTemplates.js"></script>
         <script src="js/arnStatistics.js"></script>
         <script src="js/controllers/LoginController.js"></script>
