--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled collapse" id="menu3">
                                 <li><a href="#!/networkMgt"><i class="glyphicon glyphicon-link"></i> Management</a></li>
                                 <li><a href="#!/networkResources"><i class="glyphicon glyphicon-list"></i> Resources</a></li>
-                                <li><a href="#!/networkActions"><i class="glyphicon glyphicon-circle"></i> Actions</a></li>
+                                <!--li><a href="#!/networkActions"><i class="glyphicon glyphicon-circle"></i> Actions</a></li-->
                             </ul>
                         </li>
                         <li class="nav-header">
