Removed unused bower entries. Disabled index menu buttons. Insert flows bug solved

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,7 +113,7 @@
                     </ul>
                     <a href="#!/"><strong><i class="glyphicon glyphicon-dashboard"></i> My Dashboard</strong></a>
                     <hr>
-                    <div class="container ng-hide" ng-show="initialized">
+                    <div class="container-non-responsive ng-hide" ng-show="initialized">
                         <!--<div class="alert alert-danger" ng-show="error">{{error}}</div>-->
                         <div class="alert alert-info" ng-show="info">{{info}}</div>
                         <div ng-view></div>
