--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -112,6 +112,7 @@
                         <li><a title="Add Widget" data-toggle="modal" href="#addWidgetModal"><span class="glyphicon glyphicon-plus-sign"></span> Add Widget</a></li>
                     </ul>
                     <a href="#!/"><strong><i class="glyphicon glyphicon-dashboard"></i> My Dashboard</strong></a>
+                    <div ncy-breadcrumb></div>
                     <hr>
                     <div class="container-non-responsive ng-hide" ng-show="initialized">
                         <!--<div class="alert alert-danger" ng-show="error">{{error}}</div>-->
@@ -154,6 +155,7 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
         <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
@@ -166,6 +168,7 @@
         
         <link rel="stylesheet" type="text/css" href="css/angular-bootstrap-nav-tree/abn_tree.css">
         <script type="text/javascript" src="js/directives/angular-bootstrap-nav-tree/abn_tree_directive.js"></script>
+        <script src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.js"></script>
          
         <!-- XML to JSON lib -->
         <script src="bower_components/x2js/xml2json.js"></script>
