--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,20 +59,20 @@
                             <ul class="list-unstyled collapse in" id="userMenu">
                                 <li class="active"> <a href="#!/"><i class="glyphicon glyphicon-home"></i> Home</a></li>
                                 <li><a href="#!/"><i class="glyphicon glyphicon-envelope"></i> Messages <span class="badge badge-info">4</span></a></li>
-                                <li><a href="#!/options"><i class="glyphicon glyphicon-cog"></i> Options</a></li>
-                                <li><a href="#!/history"><i class="glyphicon glyphicon-comment"></i> History</a></li>
+                                <li><a href="#/options"><i class="glyphicon glyphicon-cog"></i> Options</a></li>
+                                <li><a href="#/history"><i class="glyphicon glyphicon-comment"></i> History</a></li>
                                 <li><a href="#!/users"><i class="glyphicon glyphicon-user"></i> User Management</a></li>
                                 <li><a href="#!/"><i class="glyphicon glyphicon-exclamation-sign"></i> Errors</a></li>
                             </ul>
                         </li>
                         <li class="nav-header">
-                            <a href="#!/network" data-toggle="collapse" data-target="#menu3">
+                            <a href="#/network" data-toggle="collapse" data-target="#menu3">
                                 <h5>Network <i class="glyphicon glyphicon-chevron-right"></i></h5>
                             </a>
 
                             <ul class="list-unstyled collapse" id="menu3">
-                                <li><a href="#!/networkMgt"><i class="glyphicon glyphicon-link"></i> Management</a></li>
-                                <li><a href="#!/networkResources"><i class="glyphicon glyphicon-list"></i> Resources</a></li>
+                                <li><a href="#/networkMgt"><i class="glyphicon glyphicon-link"></i> Management</a></li>
+                                <li><a href="#/networkResources"><i class="glyphicon glyphicon-list"></i> Resources</a></li>
                                 <!--li><a href="#!/networkActions"><i class="glyphicon glyphicon-circle"></i> Actions</a></li-->
                             </ul>
                         </li>
@@ -117,7 +117,7 @@
                     <div class="container-non-responsive ng-hide" ng-show="initialized">
                         <!--<div class="alert alert-danger" ng-show="error">{{error}}</div>-->
                         <div class="alert alert-info" ng-show="info">{{info}}</div>
-                        <div ng-view></div>
+                        <div ui-view></div>
                     </div>
                 </div>
                 <!--/col-span-9-->
