--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -191,6 +191,7 @@
 
         <script src="js/services/historyService.js"></script>
         <script src="js/services/mqNaaSResourceService.js"></script>
+        <script src="js/services/endpointService.js"></script>
 
         <script src="js/services/viService.js"></script>
         <script src="js/services/viNetService.js"></script>
